# serializer version: 1
# name: test_all_entities[humidifier.test_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_humidity': 50,
      'min_humidity': 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.test_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.HUMIDIFIER: 'humidifier'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'humidifier',
    'unique_id': 'aa:bb:cc:dd:ee:ff_humidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[humidifier.test_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'action': <HumidifierAction.HUMIDIFYING: 'humidifying'>,
      'current_humidity': 45,
      'device_class': 'humidifier',
      'friendly_name': 'Test Thermostat',
      'humidity': 35,
      'max_humidity': 50,
      'min_humidity': 10,
      'supported_features': <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.test_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[humidifier.test_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_humidity': 90,
      'min_humidity': 40,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.test_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.DEHUMIDIFIER: 'dehumidifier'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dehumidifier',
    'unique_id': 'aa:bb:cc:dd:ee:ff_dehumidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[humidifier.test_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'action': <HumidifierAction.DRYING: 'drying'>,
      'current_humidity': 45,
      'device_class': 'dehumidifier',
      'friendly_name': 'Test Thermostat',
      'humidity': 55,
      'max_humidity': 90,
      'min_humidity': 40,
      'supported_features': <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.test_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
